fix Nas security issue